--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/electives?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/electives?verifyServerCertificate=false&useSSL=true&&requireSSL=true&serverTimezone=UTC
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username=root
 spring.datasource.password=artem
 spring.jpa.show-sql=true
